--- a/additional_information.html
+++ b/additional_information.html
@@ -185,18 +185,25 @@
                                                     <label for="ta8" class="weight600">Provide the additional information.</label> 
                                                     <textarea id="ta8" rows="3" class="form-control"></textarea>
                                                     <p class="weight600 form-group form-group-md">Optional upload.</p></legend>
-                                                    <div class="form-group form-group-md">
-                                                        <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
+                                                    <div class="form-group form-group-md hidethis">
+                                                        <label class="small upload-drop-zone" for="file"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                         <input type="file" id="file" name="file" class="form-control">
                                                     </div><!-- Drop Zone -->
                                                     <div class="row">
                                                         <div class="js-upload-finished col-xs-12">
-                                                            <p id="uploaded">Processed Files</p>
-                                                            <div class="list-group">
-                                                                <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
+                                                            <p id="uploadedfile">Selected files</p>
+                                                            <div class="list-group" id="filedata">
+                                                                <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                             </div>
                                                         </div>
-                                                    </div><!-- Upload Finished -->
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-xs-12">
+                                                            <div class="col-xs-12 form-group form-group-md">
+                                                                <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -320,8 +327,25 @@
                                                         </div>
                                                         <div id="yesevidence" class="form-group"><!--toggle 'yes' radio-->
                                                             <p class="weight600" role="heading" aria-level="3">Upload evidence.</p>
-                                                            <label class="small upload-drop-zone" for="filetwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a File</label>
-                                                            <input type="file" id="filetwo" name="file-evidence" class="form-control">
+                                                            <div class="form-group form-group-md hidethis">
+                                                                <label class="small upload-drop-zone" for="filetwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
+                                                                <input type="file" id="filetwo" name="file-evidence" class="form-control">
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="js-upload-finished col-xs-12">
+                                                                    <p id="uploadedfile">Selected files</p>
+                                                                    <div class="list-group" id="filedata">
+                                                                        <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-xs-12">
+                                                                    <div class="col-xs-12 form-group form-group-md">
+                                                                        <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div><!-- Drop Zone -->
                                                         <div class="row" id="yespriors">
                                                             <div class="col-xs-12 col-md-6 col-lg-10 form-group holdsaprior"><!--toggle 'yes' radio-->
@@ -425,8 +449,25 @@
                                                   <div class="col-xs-12 form-group form-group-md">
                                                         <div class="col-xs-12 form-group form-group-md">
                                                             <p class="weight600" role="heading" aria-level="3">Upload supporting documents.</p>
-                                                            <label class="small upload-drop-zone" for="filethree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a File</label>
-                                                            <input type="file" id="filethree" name="file" class="form-control">
+                                                            <div class="form-group form-group-md hidethis">
+                                                                <label class="small upload-drop-zone" for="filethree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a File</label>
+                                                                <input type="file" id="filethree" name="file" class="form-control">
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="js-upload-finished col-xs-12">
+                                                                    <p id="uploadedfile">Selected files</p>
+                                                                    <div class="list-group" id="filedata">
+                                                                        <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-xs-12">
+                                                                    <div class="col-xs-12 form-group form-group-md">
+                                                                        <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div><!-- Drop Zone -->
                                                         <div class="col-xs-12 form-group form-group-md">
                                                             <label for="additional2" class="weight600">Provide any additional information.</label> 
