--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -180,20 +180,27 @@
                                         <form action="" method="post" enctype="multipart/form-data" aria-labelledby="markinfo">
                                             <fieldset>
                                                 <legend class="sr-only"><span>File upload</span></legend>
-                                                <div class="form-group form-group-md">
+                                                <div class="form-group form-group-md hidethis">
                                                     <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                     <input type="file" id="file" name="file" class="form-control">
+                                                </div>
+                                                <div class="row">
+                                                    <div class="js-upload-finished col-xs-12">
+                                                        <p id="uploadedfile">Selected files</p>
+                                                        <div class="list-group" id="filedata">
+                                                            <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-xs-12">
+                                                        <div class="col-xs-12 form-group form-group-md">
+                                                            <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
+                                                        </div>
+                                                    </div>
                                                 </div><!-- Drop Zone -->
                                             </fieldset>
                                         </form>
-                                        <div class="row">
-                                            <div class="js-upload-finished col-xs-12">
-                                                <p id="uploaded">Processed Files</p>
-                                                <div class="list-group">
-                                                    <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
-                                                </div>
-                                            </div>
-                                        </div><!-- Upload Finished -->
                                     </div>
                                 </div>
                             </div>
