--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -376,7 +376,7 @@
                                                                 <label for="inlineRadio18" class="radio-inline radiocontainer">No<input type="radio" name="livindividualradio" id="inlineRadio18" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                             </div><!--END radiogroup-->
                                                             <div class="col-xs-12" id="yesliving">
-                                                                <h4 class="weight600">Upload Consent</h4>
+                                                                <h4 class="weight600">Provide the consent here. You can use your own consent template or use USPTO consent template provided below.</h4>
                                                                 <p><a href="#"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> Consent Template</a></p>
                                                                 <div class="form-group form-group-md hidethis">
                                                                     <label class="small upload-drop-zone" for="consentfile"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>
